retrieveUnpackaged/objects/AWL_Planned_Work_Dates__c.object
<CustomObject>
    <fields>
        <fullName>A_L_Hours__c</fullName>
        <label>A/L Hours</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_From__c</fullName>
        <label>Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_To__c</fullName>
        <label>Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>S_L_Hours__c</fullName>
        <label>S/L Hours</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Worked__c</fullName>
        <label>Total Work Hours</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WebForm__c</fullName>
        <label>WebForm</label>
        <referenceTo>WebForms__c</referenceTo>
        <relationshipLabel>AWL Planned Works &amp; Dates</relationshipLabel>
        <relationshipName>AWL_Planned_Works_Dates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>AWL Planned Work &amp; Dates</label>
    <nameField>
        <displayFormat>AWL-{000000}</displayFormat>
        <label>AWL Planned Work &amp; Dates Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AWL Planned Works &amp; Dates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>